Stylelint: Fix/ignore function-url-quotes errors (#68181)
* Fix/ignore function-url-quotes

* Restore/fix paths

--- a/apps/o2-blocks/src/task/editor.scss
+++ b/apps/o2-blocks/src/task/editor.scss
@@ -61,7 +61,7 @@
 .wp-block-todo.is-checked .wp-block-todo__status,
 .wp-block-todo.is-checked img {
 	background-color: #00b0e8;
-	background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+PGc+PHBhdGggZmlsbD0iI2ZmZiIgZD0iTTkgMTkuNDE0bC02LjcwNy02LjcwNyAxLjQxNC0xLjQxNEw5IDE2LjU4NiAyMC4yOTMgNS4yOTNsMS40MTQgMS40MTQiPjwvcGF0aD48L2c+PC9zdmc+");
+	background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+PGc+PHBhdGggZmlsbD0iI2ZmZiIgZD0iTTkgMTkuNDE0bC02LjcwNy02LjcwNyAxLjQxNC0xLjQxNEw5IDE2LjU4NiAyMC4yOTMgNS4yOTNsMS40MTQgMS40MTQiPjwvcGF0aD48L2c+PC9zdmc+);
 	border-color: #00b0e8;
 	background-repeat: no-repeat;
 	background-position: 50% center;
