--- a/client/components/jetpack/backup-getting-started/style.scss
+++ b/client/components/jetpack/backup-getting-started/style.scss
@@ -12,7 +12,7 @@ $content-max-width: 210px;
 
 	@include break-medium {
 		height: $card-height-desktop;
-		background-image: url("calypso/assets/images/jetpack/getting-started-backup-bg.svg");
+		background-image: url(calypso/assets/images/jetpack/getting-started-backup-bg.svg);
 		grid-template-columns: minmax(0, $preview-max-width) minmax($content-max-width, 1fr);
 		grid-column-gap: 1.5rem;
 	}
