--- a/client/components/product-card/style.scss
+++ b/client/components/product-card/style.scss
@@ -306,7 +306,7 @@
 	padding: 12px 16px 16px;
 	transform: rotate(-10deg);
 	color: var(--studio-white);
-	background: url("/calypso/images/illustrations/promo-star.svg") no-repeat center;
+	background: url(/calypso/images/illustrations/promo-star.svg) no-repeat center;
 	background-size: contain;
 	font-size: $font-body-small;
 	font-weight: 600;
