--- a/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/theme-info-popup.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/theme-info-popup.scss
@@ -8,8 +8,8 @@
 	font-weight: 400;
 	font-display: swap;
 	src:
-		url("https://s0.wp.com/i/fonts/inter/Inter-Regular.woff2?v=3.19") format("woff2"),
-		url("https://s0.wp.com/i/fonts/inter/Inter-Regular.woff?v=3.19") format("woff");
+		url(https://s0.wp.com/i/fonts/inter/Inter-Regular.woff2?v=3.19) format("woff2"),
+		url(https://s0.wp.com/i/fonts/inter/Inter-Regular.woff?v=3.19) format("woff");
 }
 
 @font-face {
@@ -18,8 +18,8 @@
 	font-weight: 500;
 	font-display: swap;
 	src:
-		url("https://s0.wp.com/i/fonts/inter/Inter-Medium.woff2?v=3.19") format("woff2"),
-		url("https://s0.wp.com/i/fonts/inter/Inter-Medium.woff?v=3.19") format("woff");
+		url(https://s0.wp.com/i/fonts/inter/Inter-Medium.woff2?v=3.19) format("woff2"),
+		url(https://s0.wp.com/i/fonts/inter/Inter-Medium.woff?v=3.19) format("woff");
 }
 
 .step-container .step-container__content .theme-info-popup,
