--- a/client/landing/stepper/declarative-flow/internals/steps-repository/woo-verify-email/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/woo-verify-email/style.scss
@@ -2,7 +2,7 @@
 @import "@wordpress/base-styles/breakpoints";
 @import "@wordpress/base-styles/mixins";
 
-$bg-image: url("./celebration-background.svg");
+$bg-image: url(./celebration-background.svg);
 
 .site-setup.woo-verify-email {
 	min-height: 100vh;
