--- a/client/my-sites/plans/jetpack-plans/style.scss
+++ b/client/my-sites/plans/jetpack-plans/style.scss
@@ -8,8 +8,8 @@
 	font-weight: 400;
 	font-display: swap;
 	src:
-		url("https://s0.wp.com/i/fonts/inter/Inter-Regular.woff2?v=3.19") format("woff2"),
-		url("https://s0.wp.com/i/fonts/inter/Inter-Regular.woff?v=3.19") format("woff");
+		url(https://s0.wp.com/i/fonts/inter/Inter-Regular.woff2?v=3.19) format("woff2"),
+		url(https://s0.wp.com/i/fonts/inter/Inter-Regular.woff?v=3.19) format("woff");
 }
 @font-face {
 	font-family: Inter;
@@ -17,8 +17,8 @@
 	font-weight: 400;
 	font-display: swap;
 	src:
-		url("https://s0.wp.com/i/fonts/inter/Inter-Italic.woff2?v=3.19") format("woff2"),
-		url("https://s0.wp.com/i/fonts/inter/Inter-Italic.woff?v=3.19") format("woff");
+		url(https://s0.wp.com/i/fonts/inter/Inter-Italic.woff2?v=3.19) format("woff2"),
+		url(https://s0.wp.com/i/fonts/inter/Inter-Italic.woff?v=3.19) format("woff");
 }
 
 @font-face {
@@ -27,8 +27,8 @@
 	font-weight: 500;
 	font-display: swap;
 	src:
-		url("https://s0.wp.com/i/fonts/inter/Inter-Medium.woff2?v=3.19") format("woff2"),
-		url("https://s0.wp.com/i/fonts/inter/Inter-Medium.woff?v=3.19") format("woff");
+		url(https://s0.wp.com/i/fonts/inter/Inter-Medium.woff2?v=3.19) format("woff2"),
+		url(https://s0.wp.com/i/fonts/inter/Inter-Medium.woff?v=3.19) format("woff");
 }
 @font-face {
 	font-family: Inter;
@@ -36,8 +36,8 @@
 	font-weight: 500;
 	font-display: swap;
 	src:
-		url("https://s0.wp.com/i/fonts/inter/Inter-MediumItalic.woff2?v=3.19") format("woff2"),
-		url("https://s0.wp.com/i/fonts/inter/Inter-MediumItalic.woff?v=3.19") format("woff");
+		url(https://s0.wp.com/i/fonts/inter/Inter-MediumItalic.woff2?v=3.19) format("woff2"),
+		url(https://s0.wp.com/i/fonts/inter/Inter-MediumItalic.woff?v=3.19) format("woff");
 }
 
 @font-face {
@@ -46,8 +46,8 @@
 	font-weight: 600;
 	font-display: swap;
 	src:
-		url("https://s0.wp.com/i/fonts/inter/Inter-SemiBold.woff2?v=3.19") format("woff2"),
-		url("https://s0.wp.com/i/fonts/inter/Inter-SemiBold.woff?v=3.19") format("woff");
+		url(https://s0.wp.com/i/fonts/inter/Inter-SemiBold.woff2?v=3.19) format("woff2"),
+		url(https://s0.wp.com/i/fonts/inter/Inter-SemiBold.woff?v=3.19) format("woff");
 }
 @font-face {
 	font-family: Inter;
@@ -55,8 +55,8 @@
 	font-weight: 600;
 	font-display: swap;
 	src:
-		url("https://s0.wp.com/i/fonts/inter/Inter-SemiBoldItalic.woff2?v=3.19") format("woff2"),
-		url("https://s0.wp.com/i/fonts/inter/Inter-SemiBoldItalic.woff?v=3.19") format("woff");
+		url(https://s0.wp.com/i/fonts/inter/Inter-SemiBoldItalic.woff2?v=3.19) format("woff2"),
+		url(https://s0.wp.com/i/fonts/inter/Inter-SemiBoldItalic.woff?v=3.19) format("woff");
 }
 
 @font-face {
@@ -65,8 +65,8 @@
 	font-weight: 700;
 	font-display: swap;
 	src:
-		url("https://s0.wp.com/i/fonts/inter/Inter-Bold.woff2?v=3.19") format("woff2"),
-		url("https://s0.wp.com/i/fonts/inter/Inter-Bold.woff?v=3.19") format("woff");
+		url(https://s0.wp.com/i/fonts/inter/Inter-Bold.woff2?v=3.19) format("woff2"),
+		url(https://s0.wp.com/i/fonts/inter/Inter-Bold.woff?v=3.19) format("woff");
 }
 @font-face {
 	font-family: Inter;
@@ -74,8 +74,8 @@
 	font-weight: 700;
 	font-display: swap;
 	src:
-		url("https://s0.wp.com/i/fonts/inter/Inter-BoldItalic.woff2?v=3.19") format("woff2"),
-		url("https://s0.wp.com/i/fonts/inter/Inter-BoldItalic.woff?v=3.19") format("woff");
+		url(https://s0.wp.com/i/fonts/inter/Inter-BoldItalic.woff2?v=3.19) format("woff2"),
+		url(https://s0.wp.com/i/fonts/inter/Inter-BoldItalic.woff?v=3.19) format("woff");
 }
 
 .selector__main {
