--- a/client/my-sites/stats/post-trends/style.scss
+++ b/client/my-sites/stats/post-trends/style.scss
@@ -62,13 +62,13 @@
 		width: 30px;
 		height: 100px;
 		display: block;
-		background: url("/calypso/images/stats/left-arrow.svg") no-repeat 4px 48px;
+		background: url(/calypso/images/stats/left-arrow.svg) no-repeat 4px 48px;
 		background-size: 18px 18px;
 		opacity: 0.15;
 	}
 
 	.right-arrow {
-		background: url("/calypso/images/stats/right-arrow.svg") no-repeat 4px 48px;
+		background: url(/calypso/images/stats/right-arrow.svg) no-repeat 4px 48px;
 		background-size: 18px 18px;
 	}
 
