--- a/client/components/jetpack/sidebar/style.scss
+++ b/client/components/jetpack/sidebar/style.scss
@@ -1,4 +1,4 @@
-@import url( "//s1.wp.com/wp-includes/css/dashicons.css?v=20150727" ); // Used for switch-sites icon.
+@import url( //s1.wp.com/wp-includes/css/dashicons.css?v=20150727 ); // Used for switch-sites icon.
 
 // Menu links
 .sidebar__jetpack-cloud {
