--- a/client/my-sites/plans/jetpack-plans/storage-tier-upgrade/style.scss
+++ b/client/my-sites/plans/jetpack-plans/storage-tier-upgrade/style.scss
@@ -45,7 +45,7 @@
 			font-weight: 700;
 
 			&::before {
-				content: url("/calypso/images/jetpack/star-green.svg");
+				content: url(/calypso/images/jetpack/star-green.svg);
 				position: relative;
 				top: 6px;
 				padding-inline-end: 6px;
