--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -1,5 +1,5 @@
 // The following changes should be merged in their respective files before nav unification goes to production
-@import url( "//s1.wp.com/wp-includes/css/dashicons.css?v=20150727" );
+@import url( //s1.wp.com/wp-includes/css/dashicons.css?v=20150727 );
 
 // Override Global Vars
 .theme-default {
