--- a/client/signup/p2-step-wrapper/style-p2v1.scss
+++ b/client/signup/p2-step-wrapper/style-p2v1.scss
@@ -1,4 +1,4 @@
-@import url( "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;900&display=swap" );
+@import url( https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;900&display=swap );
 @import "@wordpress/base-styles/breakpoints";
 @import "@wordpress/base-styles/mixins";
 @import "calypso/assets/stylesheets/p2-extends";
