--- a/client/blocks/jetpack-backup-creds-banner/style.scss
+++ b/client/blocks/jetpack-backup-creds-banner/style.scss
@@ -1,5 +1,5 @@
 .jetpack-backup-creds-banner.card.banner {
-	@include banner-color( var( --studio-red-50 ) );
+	@include banner-color( var( --studio-jetpack-green-40 ) );
 
 	/*
 	The "disconnected" icon comes with its own circular border,
