--- a/client/landing/stepper/declarative-flow/internals/steps-repository/shared-components/setup-form/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/shared-components/setup-form/style.scss
@@ -18,12 +18,10 @@
 		font-family: "SF Pro Text", $sans;
 		font-weight: 400;
 	}
+
 	input,
 	textarea,
 	pre {
-		// min-height: 44px;
-		// line-height: 20px;
-		// padding: 12px 16px;
 		color: var(--studio-gray-100);
 		font-size: $font-body-small;
 		padding: 12px 16px;
@@ -43,12 +41,26 @@
 			transition: none;
 		}
 	}
+
 	label {
 		color: var(--studio-gray-60);
 		font-size: $font-body;
 	}
+
 	input {
 		height: 44px;
+	}
+
+	.components-form-file-upload {
+		span {
+			text-decoration: underline;
+		}
+		.add {
+			color: var(--studio-black);
+		}
+		.replace {
+			color: var(--studio-gray-100);
+		}
 	}
 }
 
@@ -57,6 +69,16 @@ fieldset {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
+	margin-bottom: 16px;
+}
+
+.form-input-validation {
+	padding-bottom: 0;
+}
+
+.form-label {
+	color: var(--studio-black);
+	margin-bottom: 8px;
 }
 
 .setup-form__contrast-warning {
@@ -86,9 +108,10 @@ fieldset {
 	background-color: var(--studio-blue-50);
 	border-radius: 4px;
 	font-weight: 500;
-	border: none;
 	width: 100%;
-	height: 40px;
+	// adds +2 px of padding to the button to match the input field height
+	padding: 10px 14px;
+	margin-top: 16px;
 
 	&:hover:not([disabled]) {
 		background-color: var(--wp-admin-theme-color-darker-10);
