Sidebar: Limit Site Switcher results to 50, including hidden sites (#68302)
Co-authored-by: Daniel Bachhuber <daniel.bachhuber@automattic.com>

--- a/client/layout/style.scss
+++ b/client/layout/style.scss
@@ -201,8 +201,7 @@
 			color: var(--color-sidebar-text-alternative);
 		}
 
-		&__hidden-sites-message,
-		&__manage-hidden-sites {
+		&__list-bottom-adornment {
 			color: var(--color-sidebar-text);
 		}
 
