--- a/client/components/site-selector/style.scss
+++ b/client/components/site-selector/style.scss
@@ -204,13 +204,14 @@
 	border-bottom: 1px solid var(--color-neutral-10);
 }
 
-.site-selector__hidden-sites-message {
+.site-selector__list-bottom-adornment {
 	color: var(--color-text-subtle);
 	display: block;
 	font-size: $font-body-extra-small;
 	padding: 16px 16px 24px;
 
-	.site-selector__manage-hidden-sites {
+	a {
+		color: inherit;
 		text-decoration: underline;
 
 		&:hover {
@@ -219,6 +220,6 @@
 	}
 }
 
-.site-selector__no-results + .site-selector__hidden-sites-message {
+.site-selector__no-results + .site-selector__list-bottom-adornment {
 	display: none;
 }
