Add close button to Dialog component (#68314)
* Added support to X button at the Dialog component #67695

* Drop opacity

Co-authored-by: Paulo Trentin <paulo@paulotrentin.com.br>

--- a/packages/components/src/dialog/style.scss
+++ b/packages/components/src/dialog/style.scss
@@ -112,6 +112,14 @@
 	float: left;
 }
 
+.dialog__action-buttons-close {
+	padding: 15px 15px 5px 5px;
+	position: absolute;
+	z-index: 1;
+	right: 0;
+	cursor: pointer;
+}
+
 .ReactModal__Body--open {
 	overflow: hidden;
 }
