--- a/client/my-sites/plugins/plugin-details-CTA/style.scss
+++ b/client/my-sites/plugins/plugin-details-CTA/style.scss
@@ -13,11 +13,24 @@
 }
 
 .plugin-details-cta__dialog-content {
+	.dialog__content {
+		padding: 0;
+	}
+
 	.eligibility-warnings {
 		margin: 0;
 
 		.card {
 			box-shadow: none;
+		}
+
+		.card:last-of-type.is-compact {
+			border-top: 1px solid var(--color-border-shadow);
+		}
+
+		.eligibility-warnings__confirm-buttons {
+			display: flex;
+			justify-content: flex-end;
 		}
 	}
 }
