--- a/client/landing/stepper/declarative-flow/internals/steps-repository/processing-step/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/processing-step/style.scss
@@ -53,3 +53,25 @@ $progress-duration: 800ms;
 .anchor-fm.processing .step-container__content {
 	width: 100%;
 }
+
+.is-videopress-stepper.is-processing-step {
+	padding: 0;
+	color: #fff;
+	background-image:
+		url( calypso/assets/images/onboarding/videopress-processing-left.png ),
+		url( calypso/assets/images/onboarding/videopress-processing-right.png );
+	background-position-y: 15%, 100%;
+	background-position-x: -10%, 100%;
+	background-repeat: no-repeat, no-repeat;
+	background-attachment: fixed;
+	background-size: auto 40%, auto 40%;
+
+	@include break-medium {
+		background-size: auto 50%, auto 50%;
+	}
+
+	@include break-large {
+		background-position-y: 50%, 100%;
+		background-position-x: 0, 100%;
+	}
+}
