--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -528,6 +528,7 @@
 .reader-post-card.card {
 	.reader-excerpt {
 		display: -webkit-box;
+		max-height: 45px;
 		overflow: hidden;
 	  -webkit-line-clamp: 2;
 	  -webkit-box-orient: vertical;
