--- a/client/blocks/reader-post-actions/style.scss
+++ b/client/blocks/reader-post-actions/style.scss
@@ -20,6 +20,7 @@
 			align-items: center;
 			box-sizing: border-box;
 			display: flex;
+			gap: 4px;
 			padding: 4px 4px 4px 0;
 			position: relative;
 
