--- a/client/blocks/follow-button/style.scss
+++ b/client/blocks/follow-button/style.scss
@@ -2,6 +2,7 @@ $follow-button-gray-disabled: var( --color-neutral-10 );
 
 .follow-button,
 button.follow-button {
+	align-items: center;
 	border: 0;
 	display: flex;
 	padding: 0;
