--- a/client/blocks/reader-related-card/style.scss
+++ b/client/blocks/reader-related-card/style.scss
@@ -253,8 +253,49 @@
 	border: 1px solid var( --color-neutral-0 );
 	min-height: 78px;
 
+	&.reader-featured-image {
+		max-height: 150px;
+
+		img {
+			max-width: unset;
+		}
+	}
 	@include breakpoint-deprecated( '>960px' ) {
 		min-height: 153px;
+	}
+}
+.reader-related-card {
+	.reader-related-card__link-block {
+		margin-bottom: 16px;
+	}
+	.reader-related-card__title {
+		display: -webkit-box;
+    overflow: hidden;
+    word-wrap: break-word;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+	}
+}
+.reader-stream__recommended-post-dismiss {
+	display: none;
+}
+@include breakpoint-deprecated( '<660px' ) {
+	.reader-stream__recommended-posts {
+		border-bottom: 5px solid var(--color-neutral-0) !important;
+		margin: 0 !important;
+
+		.reader-stream__recommended-posts-header {
+			margin: 15px;
+		}
+		.reader-stream__recommended-posts-list {
+			margin: 0 15px;
+		}
+		.reader-related-card__link-block {
+			margin-bottom: 0;
+		}
+		.reader-stream__recommended-posts-list-item .card.reader-related-card {
+			width: 100%;
+		}
 	}
 }
 
