Fixed like button on single post screen

--- a/client/blocks/author-compact-profile/style.scss
+++ b/client/blocks/author-compact-profile/style.scss
@@ -80,7 +80,7 @@
 .author-compact-profile__follow {
 	display: flex;
 	flex-wrap: wrap;
-	margin: 11px 0;
+	margin: 11px 0 5px;
 
 	.follow-button {
 		padding: 5px;
