--- a/client/blocks/reader-full-post/style.scss
+++ b/client/blocks/reader-full-post/style.scss
@@ -350,6 +350,11 @@
 }
 
 .reader-full-post__sidebar-comment-like {
+	align-items: center;
+	display: flex;
+	gap: 5px;
+	justify-content: center;
+
 	@include breakpoint-deprecated( '<660px' ) {
 		align-items: flex-start;
 		background: white;
@@ -367,10 +372,17 @@
 }
 
 .reader-full-post__sidebar .like-button {
-	margin-right: 18px;
+	align-items: center;
+	display: flex;
+	gap: 5px;
+	justify-content: center;
 
 	@include breakpoint-deprecated( '<660px' ) {
 		top: 9px;
+	}
+
+	.like-button__like-icons {
+		top: 4px;
 	}
 
 	.like-button__label-status {
@@ -384,10 +396,17 @@
 }
 
 .reader-full-post__sidebar .comment-button {
-	margin-right: 18px;
+	align-items: center;
+	display: flex;
+	gap: 5px;
+	justify-content: center;
 
 	@include breakpoint-deprecated( '<660px' ) {
 		top: 9px;
+	}
+
+	.comment-button__icon {
+		margin-right: 0;
 	}
 
 	.comment-button__label-status {
