--- a/client/blocks/eligibility-warnings/style.scss
+++ b/client/blocks/eligibility-warnings/style.scss
@@ -14,6 +14,15 @@
 	}
 }
 
+.eligibility-warnings__title {
+	font-family: $brand-serif;
+	font-size: $font-title-large;
+	overflow-wrap: anywhere;
+	line-height: 40px;
+	color: var(--studio-gray-100);
+	font-weight: 400;
+}
+
 .eligibility-warnings--with-indent {
 	.eligibility-warnings__message {
 		padding: 0 16px;
