Style fixes to match figma

--- a/client/blocks/eligibility-warnings/style.scss
+++ b/client/blocks/eligibility-warnings/style.scss
@@ -23,6 +23,10 @@
 	font-weight: 400;
 }
 
+.eligibility-warnings__primary-text {
+	margin-top: 8px;
+}
+
 .eligibility-warnings--with-indent {
 	.eligibility-warnings__message {
 		padding: 0 16px;
