--- a/client/my-sites/plugins/plugin-details-CTA/style.scss
+++ b/client/my-sites/plugins/plugin-details-CTA/style.scss
@@ -20,15 +20,19 @@
 	.eligibility-warnings {
 		margin: 0;
 
-		.eligibility-warnings__header {
-			margin-top: 32px; // 16px from card + 32 = 48 gap from top
-		}
-
 		.card {
 			box-shadow: none;
 
 			padding-left: 48px;
 			padding-right: 48px;
+
+			.notice {
+				margin-bottom: 0;
+			}
+		}
+
+		.card:first-of-type.is-compact {
+			padding-top: 48px; // 16px from card padding + 32 = 48 gap from top
 		}
 
 		.card:last-of-type.is-compact {
