--- a/client/my-sites/email/email-management/style.scss
+++ b/client/my-sites/email/email-management/style.scss
@@ -171,12 +171,6 @@
 	}
 }
 
-.email-plan__actions .vertical-nav-item.card,
-.email-plan-mailboxes-list__mailbox-list-item.card.is-compact {
-	padding-bottom: 28px;
-	padding-top: 28px;
-}
-
 .email-plan-header__status {
 	display: flex;
 	align-items: center;
@@ -266,7 +260,7 @@
 		}
 
 		> svg {
-			fill: white;
+			fill: #fff;
 		}
 	}
 
@@ -278,6 +272,8 @@
 .email-plan-mailboxes-list__mailbox-list-item.card.is-compact {
 	flex-direction: column;
 	display: flex;
+	padding-bottom: 28px;
+	padding-top: 28px;
 
 	@include break-xlarge {
 		flex-direction: row;
