--- a/client/me/purchases/manage-purchase/style.scss
+++ b/client/me/purchases/manage-purchase/style.scss
@@ -1,21 +1,27 @@
-.purchases.manage-purchase > button.card,
-.purchases.manage-purchase > a.card {
-	padding-inline-start: 16px;
-	padding-inline-end: 16px;
+.manage-purchase > button.card,
+.manage-purchase > a.card {
+	--icon-size: 16px;
 
-	color: var(--color-link);
-
-	.card__link-indicator {
-		right: 16px;
-
-		@include breakpoint-deprecated( ">660px" ) {
-			right: 24px;
-		}
-	}
+	padding-inline-start: calc(var(--icon-size) * 2.5);
+	padding-inline-end: var(--icon-size);
 
 	@include breakpoint-deprecated( ">660px" ) {
-		padding-inline-start: 24px;
-		padding-inline-end: 24px;
+		--icon-size: 24px;
+	}
+
+	color: var(--color-text-subtle);
+
+	.card__icon {
+		position: absolute;
+		left: var(--icon-size);
+		top: 0;
+		width: var(--icon-size);
+		height: 100%;
+		fill: currentcolor;
+	}
+
+	.card__link-indicator {
+		right: var(--icon-size);
 	}
 }
 
@@ -242,9 +248,11 @@
 			&:first-child {
 				padding-left: 0;
 			}
+
 			&:last-child {
 				padding-right: 0;
 			}
+
 			&:first-child:nth-last-child(4),
 			&:first-child:nth-last-child(4) ~ li {
 				max-width: 25%;
@@ -314,6 +322,7 @@
 		display: flex;
 		align-items: center;
 		gap: 4px;
+
 		svg {
 			flex-shrink: 0;
 			fill: var(--color-warning-30);
@@ -399,7 +408,6 @@
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
-
 	margin-bottom: 0;
 
 	@include breakpoint-deprecated( ">480px" ) {
@@ -408,7 +416,6 @@
 
 	@include breakpoint-deprecated( "<660px" ) {
 		padding: 16px;
-
 		box-shadow: none;
 	}
 
@@ -419,16 +426,12 @@
 
 .manage-purchase__jetpack-user-license-clipboard {
 	display: flex;
-
 	margin-top: 16px;
 
 	input.form-text-input.manage-purchase__jetpack-user-license-input {
 		font-size: $font-body-small;
-
 		margin-right: 16px;
-
 		background-color: var(--studio-gray-0);
-
 		border: none;
 
 		@include breakpoint-deprecated( ">480px" ) {
