no image border-radius

--- a/client/blocks/reader-feed-header/style.scss
+++ b/client/blocks/reader-feed-header/style.scss
@@ -25,7 +25,8 @@
 .reader-feed-header__site-icon {
 	align-self: center;
 	padding-bottom: 16px;
-	img {
+	img,
+	.site-icon.is-blank {
 		border-radius: 100%;
 	}
 }
