--- a/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
@@ -50,7 +50,7 @@ $border-radius: 4px;
 		}
 
 		.form-label {
-			color: var(--studio-gray-100);
+			color: var(--studio-black);
 			margin-bottom: 8px;
 		}
 
@@ -96,7 +96,7 @@ $border-radius: 4px;
 		}
 
 		.components-form-file-upload .add {
-			color: var(--studio-gray-100);
+			color: var(--studio-black);
 		}
 
 		.newsletter-setup__contrast-warning {
