--- a/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
@@ -97,6 +97,7 @@ $border-radius: 4px;
 
 		.components-form-file-upload .add {
 			color: var(--studio-black);
+			text-decoration: underline;
 		}
 
 		.newsletter-setup__contrast-warning {
