Cleaned some styles up on single post page

--- a/client/blocks/comments/post-comment-list.scss
+++ b/client/blocks/comments/post-comment-list.scss
@@ -13,6 +13,10 @@
 		margin-top: 4px;
 		margin-left: 14px;
 		text-align: right;
+
+		svg {
+			margin-right: 6px;
+		}
 	}
 
 	.comments__actions-wrapper {
