--- a/client/blocks/comments/comment-actions.scss
+++ b/client/blocks/comments/comment-actions.scss
@@ -1,13 +1,15 @@
 // Actions for Individual Comments
 .comments__comment-actions {
+	align-items: center;
 	color: var( --color-text-subtle );
+	display: flex;
 	font-size: $font-body-small;
+	justify-content: flex-start;
 	list-style: none;
-	margin-top: -6px;
 	
 	.components-button {
-		display: inline-block;
 		color: var( --color-text-subtle );
+		display: inline-block;
 		padding: 4px;
 		height: auto;
 		margin-right: 8px;
@@ -15,30 +17,22 @@
 		font-size: $font-body-small;
 		font-weight: 400;
 		
-		.is-compact.gridicon,
-		.gridicon {
-			position: relative;
-			top: 4px;
-			margin-right: 4px;
-		}
-		
-		.gridicons-star,
-		.gridicons-star-outline {
-			top: 3px;
-		}
-		
 		.like-button__like-icons {
 			margin-right: 18px;
+		}
+
+		.gridicons-star {
+			display: none;
 		}
 		
 		&.comments__comment-actions-reply {
 			margin-left: -7px;
 		}
-		
-		&.like-button {
-			.gridicon {
-				position: absolute;
-			}
+
+		.gridicons-reply {
+			margin-right: 2px;
+			position: relative;
+    	top: 4px;
 		}
 		
 		&:hover {
@@ -60,18 +54,6 @@
 			.comments__comment-actions-read-more-icon {
 				fill: var( --color-primary );
 			}
-		}
-	}
-	
-	// Aligns Like icon to comment text when it's by itself
-	> :only-child {
-		left: -3px;
-		top: 3px;
-	}
-
-	@include breakpoint-deprecated( '<480px' ) {
-		.like-button .like-button__label-status {
-			display: inline;
 		}
 	}
 }
