Updates to action bar

--- a/client/blocks/reader-full-post/style.scss
+++ b/client/blocks/reader-full-post/style.scss
@@ -608,6 +608,8 @@
 }
 
 .reader-full-post__content .reader-post-actions__item {
+	margin-right: 18px;
+
 	.comment-button__label-count {
 		top: 0;
 	}
