--- a/packages/onboarding/src/step-container/style.scss
+++ b/packages/onboarding/src/step-container/style.scss
@@ -265,6 +265,11 @@
 		line-height: 20px;
 		margin: 1rem 0;
 
+		@media ( min-width: 660px ) {
+			margin-top: auto;
+			margin-bottom: 10px;
+		}
+
 		svg {
 			margin-inline-end: 6px;
 		}
