--- a/client/signup/tailored-flow-processing-screen/style.scss
+++ b/client/signup/tailored-flow-processing-screen/style.scss
@@ -56,6 +56,11 @@
 			svg.jetpack-logo {
 				margin-right: 6px;
 			}
+
+			@media ( min-width: 660px ) {
+				margin-top: auto;
+				margin-bottom: 10px;
+			}
 		}
 	}
 
