--- a/packages/pattern-picker/src/styles.scss
+++ b/packages/pattern-picker/src/styles.scss
@@ -79,6 +79,7 @@ $patterns: "17-2", "black", "ella-d", "link-cloud", "matt-smith", "ose-maiko", "
 	direction: ltr;
 	padding: 20px;
 	box-sizing: border-box;
+	pointer-events: none;
 
 	@include break-small {
 		display: flex;
@@ -99,6 +100,7 @@ $patterns: "17-2", "black", "ella-d", "link-cloud", "matt-smith", "ose-maiko", "
 	display: flex;
 	box-shadow: 1px 1px 3px 0 rgb(0 0 0 / 18%);
 	transition: opacity 0.3s ease-in-out;
+	pointer-events: all;
 
 	cursor: pointer;
 
@@ -109,6 +111,7 @@ $patterns: "17-2", "black", "ella-d", "link-cloud", "matt-smith", "ose-maiko", "
 
 	&.is-hidden {
 		visibility: hidden;
+		pointer-events: none;
 	}
 }
 
