Marketplace Install Dialog: Add Title & Primary Text to elegibility-warnings (#68365)
* Add Title & Primary Text to elegibility-warnings

Co-authored-by: Louis Laugesen <louis.laugesen@gmail.com>

--- a/client/blocks/eligibility-warnings/style.scss
+++ b/client/blocks/eligibility-warnings/style.scss
@@ -14,6 +14,19 @@
 	}
 }
 
+.eligibility-warnings__title {
+	font-family: $brand-serif;
+	font-size: $font-title-large;
+	overflow-wrap: anywhere;
+	line-height: 40px;
+	color: var(--studio-gray-100);
+	font-weight: 400;
+}
+
+.eligibility-warnings__primary-text {
+	margin-top: 8px;
+}
+
 .eligibility-warnings--with-indent {
 	.eligibility-warnings__message {
 		padding: 0 16px;
@@ -123,7 +136,8 @@
 }
 
 .eligibility-warnings__hold-list-dim .eligibility-warnings__hold-heading,
-.eligibility-warnings__hold-list-dim .eligibility-warnings__hold {
+.eligibility-warnings__hold-list-dim .eligibility-warnings__hold,
+.eligibility-warnings--blocking-hold .eligibility-warnings__header {
 	opacity: 0.2;
 }
 
