--- a/client/my-sites/themes/theme-upload/style.scss
+++ b/client/my-sites/themes/theme-upload/style.scss
@@ -9,6 +9,11 @@
 	.upload-drop-zone.is-disabled {
 		opacity: 1;
 	}
+
+	.eligibility-warnings {
+		padding: 0.5em;
+		padding-top: 2em;
+	}
 }
 
 // View : theme successfully uploaded
