--- a/client/my-sites/hosting/style.scss
+++ b/client/my-sites/hosting/style.scss
@@ -46,6 +46,10 @@
 	}
 }
 
+.hosting__activating-warnings {
+	padding-top: 2em;
+}
+
 @keyframes spinning-sync-icon {
 	from {
 		transform: rotate(0deg);
