--- a/client/blocks/eligibility-warnings/style.scss
+++ b/client/blocks/eligibility-warnings/style.scss
@@ -146,3 +146,37 @@
 	margin-bottom: 20px;
 	max-width: 300px;
 }
+
+.eligibility-warnings__hold-list {
+	background: #fff;
+	border: 1px solid var(--studio-gray-5);
+	border-radius: 4px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	padding: 26px 24px;
+	gap: 10px;
+
+	h1.card-heading.card-heading-20 {
+		font-size: unset;
+		font-weight: 600;
+		margin: unset;
+		color: unset;
+	}
+
+	.eligibility-warnings__hold {
+		padding: unset;
+		margin: unset;
+		width: 100%;
+	}
+
+	.eligibility-warnings__message {
+		padding: 16px 0;
+		margin: unset;
+		border-top: 1px solid var(--studio-gray-5);
+	}
+	.eligibility-warnings__message:last-of-type {
+		padding-bottom: 0;
+	}
+}
+
