--- a/client/blocks/eligibility-warnings/style.scss
+++ b/client/blocks/eligibility-warnings/style.scss
@@ -1,22 +1,35 @@
 .eligibility-warnings {
+	// 16px from card padding + 32 = 48 gap from top|bottom
+	// 24px from card padding + 24 = 48 gab from left|right
+	padding: 32px 24px;
 	overflow-wrap: anywhere;
 	background: #fff;
-	margin-top: 16px;
 	font-size: $font-body-small;
-
-	.eligibility-warnings__confirm-buttons {
-		display: flex;
-		justify-content: space-between;
-	}
+	margin: 0;
 
 	.support-block {
 		align-items: center;
 		display: flex;
 		gap: 5px;
+		color: var(--color-text-subtle);
+		font-size: 1rem;
 	}
 
 	.card {
 		box-shadow: none;
+
+		.notice {
+			margin-bottom: 0;
+		}
+	}
+
+	.card:last-of-type.is-compact {
+		border-top: 1px solid var(--color-border-shadow);
+	}
+
+	.eligibility-warnings__confirm-buttons {
+		display: flex;
+		flex-direction: row-reverse;
 	}
 }
 
@@ -34,7 +47,9 @@
 }
 
 .eligibility-warnings__primary-text {
-	margin-top: 8px;
+	color: var(--color-text-subtle);
+	font-size: 1rem;
+	margin-top: 16px;
 }
 
 .eligibility-warnings--with-indent {
@@ -78,7 +93,6 @@
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
-	margin-bottom: 16px;
 }
 
 .eligibility-warnings__hold .gridicon,
