Fix and remove broken / unused CSS that breaks stylelint rule (#68132)

--- a/client/components/advanced-credentials/style.scss
+++ b/client/components/advanced-credentials/style.scss
@@ -65,7 +65,7 @@
 .connection-status__disconnected,
 .connection-status__loading {
 	display: flex;
-	*:not(first-child) {
+	*:not(:first-child) {
 		margin-left: 8px;
 	}
 	svg {
