--- a/client/landing/domains/content-card/style.scss
+++ b/client/landing/domains/content-card/style.scss
@@ -41,7 +41,7 @@
 	}
 
 	.content-card__action-button,
-	content-card__alternate-action-button {
+	.content-card__alternate-action-button {
 		margin-bottom: 40px;
 	}
 
