--- a/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
@@ -81,6 +81,10 @@
 		.step-container__header {
 			margin-bottom: 0;
 		}
+
+		.step-container__jetpack-powered {
+			margin: 20px 0 60px;
+		}
 	}
 
 	.intro__content {
