VideoPress onboarding v2 : buttons feedback (#68336)
* Mobile layout for choose a plan

* Trying to do stuff with things, but it's not working, WIP

* One more step: got it to the checkout page.

* Cleanup

* Cleanup

* Less parameters = more fun

* Add domain to cart

* Steps proxy on useStepNavigation

* Upate validation rules

* Disable form button if site title is not set

* Add button feedback for plan selection

* Update style.scss

Co-authored-by: Panos Kountanis <panosktn@gmail.com>

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/choose-a-plan/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/choose-a-plan/style.scss
@@ -129,6 +129,26 @@ $videopress-mobile-layout-width: 700px;
 						}
 					}
 				}
+
+				.selected-plan-item {
+					background-color: #ffe61c !important;
+					color: #000 !important;
+					background-image: repeating-linear-gradient(
+						-45deg,
+						transparent,
+						transparent 1rem,
+						rgba(0, 0, 0, 0.1) 1rem,
+						rgba(0, 0, 0, 0.1) 2rem
+					) !important;
+					background-size: 200% 200% !important;
+					animation: videopress-selected-plan-item 10s linear infinite !important;
+				}
+
+				@keyframes videopress-selected-plan-item {
+					100% {
+						background-position: 100% 100%;
+					}
+				}
 			}
 		}
 	}
