Ajdust margin for the label component

--- a/packages/subscriber/src/components/add-form/style.scss
+++ b/packages/subscriber/src/components/add-form/style.scss
@@ -85,7 +85,7 @@
 		width: 100%;
 		font-size: 0.875rem;
 		line-height: 1.25rem; /* stylelint-disable-line declaration-property-unit-allowed-list */
-		margin: 0.75rem 0 1.5rem;
+		margin: 1rem 0;
 
 		&.add-subscriber__form-label-links {
 			.components-button {
