Hide color picker pointer

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
@@ -136,6 +136,11 @@ $border-radius: 4px;
 	.components-h-stack {
 		width: unset !important;
 	}
+	.react-colorful__saturation {
+		.react-colorful__pointer {
+			display: none;
+		}
+	}
 }
 
 .newsletter-setup__accent-color-popover {
