--- a/client/my-sites/hosting/style.scss
+++ b/client/my-sites/hosting/style.scss
@@ -46,8 +46,9 @@
 	}
 }
 
-.hosting__activating-warnings {
-	padding-top: 2em;
+.hosting__activating-warnings.eligibility-warnings {
+	padding-top: 3em;
+	margin-top: 1em;
 }
 
 @keyframes spinning-sync-icon {
