Fix valdation icon color

--- a/packages/subscriber/src/components/add-form/style.scss
+++ b/packages/subscriber/src/components/add-form/style.scss
@@ -161,11 +161,16 @@
 		svg {
 			position: absolute;
 			margin-inline-start: -2rem;
-			fill: none;
 		}
 
 		&.is-warning {
 			color: var(--studio-gray-40);
+		}
+
+		&:not(.is-error) {
+			svg {
+				fill: none;
+			}
 		}
 	}
 
