--- a/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
@@ -125,8 +125,13 @@
 	padding: 80px 20px 10px;
 	display: none;
 
-	button {
+	.button.navigation-link {
 		text-decoration: underline;
+
+		&:hover,
+		&:focus {
+			color: var(--studio-blue-50);
+		}
 	}
 
 	@include break-large {
@@ -226,15 +231,9 @@
 	font-weight: 600;
 }
 
-// change badge color on hover (Choose a Plan step)
-.launchpad__task:hover {
-	.launchpad__checklist-item .badge {
-		background: var(--studio-blue-10);
-	}
-}
-
 // completed tasks
-.launchpad__task.is-completed {
+.launchpad__task.completed-and-inactive,
+.launchpad__task.completed-and-active {
 	.launchpad__checklist-item-text {
 		color: var(--studio-gray-50);
 		font-weight: 400;
@@ -246,8 +245,11 @@
 	}
 }
 
-// completed tasks that are kept active
-.launchpad__task.keep-active:hover {
+// not-completed && completed-and-active tasks
+.launchpad__task.completed-and-active:hover,
+.launchpad__task.not-completed:hover,
+.launchpad__task.completed-and-active > a:focus,
+.launchpad__task.not-completed > a:focus {
 	.launchpad__checklist-item-text {
 		color: var(--studio-blue-50);
 	}
@@ -255,6 +257,11 @@
 	.launchpad__checklist-item-chevron,
 	.launchpad__checklist-item-checkmark {
 		fill: var(--studio-blue-50);
+	}
+
+	// change badge color on hover (Choose a Plan step)
+	.badge {
+		background: var(--studio-blue-10);
 	}
 }
 
