--- a/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
@@ -21,4 +21,10 @@
 			}
 		}
 	}
+
+	// Overrides top margin for setup form component
+	// Needed due to extra accent color control above submit
+	.setup-form__form .setup-form__submit {
+		margin-top: 0;
+	}
 }
