Fix audio playing in HC (#68276)

--- a/apps/happychat/src/index.ejs
+++ b/apps/happychat/src/index.ejs
@@ -31,6 +31,7 @@
 				enable_all_sections: false,
 				livechat_support_locales: [ 'en' ],
 				upwork_support_locales: [ 'de' ],
+				happychat_pling_noise_path: '/calypso-happychat/chat-pling.wav',
 				jetpack_support_blog: 'jetpackme.wordpress.com',
 				wpcom_support_blog: 'en.support.wordpress.com',
 				gutenboarding_url: '/new',
