Eligibility warning improvements

--- a/client/blocks/eligibility-warnings/style.scss
+++ b/client/blocks/eligibility-warnings/style.scss
@@ -227,6 +227,7 @@
 .eligibility-warnings__warnings-card {
 	background: #f6f7f7;
 	margin: 0 24px;
+	border-radius: 4px;
 
 	@media ( max-width: 480px ) {
 		margin: 0 16px;
