make selected box color var

--- a/packages/calypso-color-schemes/src/shared/color-schemes/_default.scss
+++ b/packages/calypso-color-schemes/src/shared/color-schemes/_default.scss
@@ -207,6 +207,8 @@
 	--color-border-inverted: var(--studio-white);
 	--color-border-inverted-rgb: var(--studio-white-rgb);
 
+	--color-bg-selected: #f9fbfd;
+
 	--color-link: var(--studio-blue-50);
 	--color-link-rgb: var(--studio-blue-50-rgb);
 	--color-link-dark: var(--studio-blue-70);
