--- a/client/landing/stepper/declarative-flow/internals/steps-repository/goals/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/goals/style.scss
@@ -123,7 +123,7 @@
 
 	&.selected {
 		border: 2px solid #0675c4;
-		background: #f9fbfd; // TODO: adjust Automattic colour scales to add more depth at lighter end of the spectrum
+		background: var(--color-bg-selected);
 		padding: 16px 24px;
 	}
 
